--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,12 @@
-
-		<h1>Sample App</h1>
-		<p>
-		This is the home page fo the
+<div class"center hero-unit">
+	<h1>Welcome to the Sample App</h1>
+	<h2>
+		This is the home page for the
 		<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> sample application.
-		</p>
+	</h2>
+	<h3>
+	<%= link_to "Sign up Now!", '#', class: "btn btn-large btn-primary" %>
+</h3>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
