Finish layout and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,7 @@
 		<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> sample application.
 	</h2>
 	<h3>
-	<%= link_to "Sign up Now!", '#', class: "btn btn-large btn-primary" %>
+	<%= link_to "Sign up Now!", signup_path, class: "btn btn-large btn-primary" %>
 </h3>
 </div>
 
