--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
 	<small>
-		<a href="http://railstutorial.org/">Rails Tutorial</a>
-		doing by JDawg and the Tranny-Boogaloos
+		<a href="http://railstutorial.org/">Tranny Bananny</a>
+		doing by JDawg and the Hooker-Boogaloos
 	</small>
 		<nav>
 			<ul>
