Add user microposts

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -73,14 +73,14 @@ p{
 	float: left;
 	margin-right:10px;
 	font-size:1.7em;
-	color:white;
+	color:#ff1493;
 	text-transform: uppercase;
 	letter-spacing: -1px;
 	padding-top: 9px;
 	font-weight: bold;
 	line-height: 1;
 	&:hover{
-	color:white;
+	color:#adff2f;
 	text-decoration:none;
 }
 }
@@ -186,5 +186,33 @@ input, textarea, select, .uneditable-input {
 		&:last-child {
 		border-bottom: 1px solid $grayLight;
 		}
+	}
+}
+
+/* microposts */
+
+.microposts {
+	list-style: none;
+	margin: 10px 0 0 0;
+
+	li {
+	padding: 10px 0;
+	border-top: 1px solid #e8e8e8;
+	}
+}
+.content {
+	display: block;
+}
+.timestamp{
+	color: $grayLight;
+}
+.gravatar {
+	float: left;
+	margin-right: 10px;
+}
+aside {
+	textarea {
+	height: 100px;
+	margin-bottom: 5px;
 	}
 }
