--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,7 @@
-<% provide(:title, 'Help') %>
-    <h1>Help</h1>
+<% provide(:title, 'Help?') %>
+    <h1>Help?</h1>
     <p>
-      Get help on the Ruby on Rails Tutorial at the
-      <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
-      To get help on this sample app, see the
-      <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
+      Yeah fucking right.  No one is here to help you through the wiley wilds of this here morass of interwebs.  </p>
+      <p>
+      The interwebs were woven by that big spider from Harry Potter.
     </p> 
