--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,8 @@
 <% provide(:title, 'About') %>
-    <h1>About This 1!</h1>
+    <h1>About This, About Me</h1>
     <p>
-     Is this any different than that one site twitter?  Probably not.  But at least you can avoid those sloppy dead celebs posthumously advertising bullshit.  Let it all fall out here.  Is life worth living if you aren't hurting someone else?  It really isn't.  Let your inner bully reign queen of all!
+     Here is my attempt at customizing a web application demonstrate some Ruby on Rails skills I have acquired through the help of various resources, including the online <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>, <a href="http://therubyist.com/">Rubyist Magazine</a>, and a textbook called Rails Recipes. 
+     You may notice some formatting similarities between this app and Twitter, and this is due to the use of the very convenient yet all the while elegant Bootstrap Ruby Gem in my Gemfile.  Currently, the bulk of users and microposts are from the use of a Factory gem which generates users for tests purposes and fills in microposts with text from Lorem ipsum.
+    </p>
+    <p>I am a mathematician turned nuclear engineer who really enjoys programming and web app development.  Make an account on here to see what this app is all about, and fully experience all the features I have included.
     </p>
