--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,7 +1,6 @@
 <% provide(:title, 'Help?') %>
     <h1>Help?</h1>
     <p>
-      Yeah fucking right.  No one is here to help you through the wiley wilds of this here morass of interwebs.  </p>
-      <p>
-      The interwebs were woven by that big spider from Harry Potter.
-    </p> 
+      No one is here to help you through the wiley wilds of this here morass of interwebs.  You are alone here!  Unless you would like to email me at dolloffj@gmail.com
+  </p>
+      
