--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,11 @@
 <footer class="footer">
 	<small>
-		<a href="http://railstutorial.org/">Tranny Bananny</a>
-		doing by JDawg and the Hooker-Boogaloos
+		Thanks for checking out this page.  Let me know what you think.
 	</small>
 		<nav>
 			<ul>
 				<li><%= link_to "About", about_path %></li>
 				<li><%= link_to "Contact", contact_path %></li>
-				<li><a href="http://news.railstutorial.org/">News</a></li>
 			</ul>
 		</nav>
 </footer>
