--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,13 +19,16 @@
 <% else %>
 
 <div class="center hero-unit">
-	<h1>Welcome to Baby Jason's Haus!!</h1>
+	<h1>Jason's Custom Web App</h1>
 	<h2>
-		This is the home page for the
-		<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> sample application.
+		Here is my customized web app, designed to show friends, the public, and potential employers my skills using Ruby on Rails
 	</h2>
 	<%= link_to "Sign up Now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
+<div>
+	<p>
+		Signing in or signing up will give users the ability to make blog posts, microposts, and follow the actions of other users.  Very Twitter-esque, but a good starting point, no?
+	</p>
+</div>
 
 <% end %>
