--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,4 +1,4 @@
 <%= form_for(current_user.relationships.build(followed_id: @user.id), remote: true) do |f| %>
 	<div><%= f.hidden_field :followed_id %></div>
-	<%= f.submit "Follow this asshole", class: "btn btn-large btn-primary" %>
+	<%= f.submit "Follow Me!", class: "btn btn-large btn-primary" %>
 	<%end %>
