--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,4 +1,4 @@
 <%= form_for(current_user.relationships.find_by_followed_id(@user),
 		html: { method: :delete}, remote: true) do |f| %>
-	<%= f.submit "Unfollow that slagface", class: "btn btn-large" %>
+	<%= f.submit "Unfollow me", class: "btn btn-large" %>
 <% end %>
